# pivot

./: .gitignore  README.md  arch-v2.mmd  arch.mmd  start.sh
backend/: alembic.ini  pyproject.toml  sessions.json  tasks.json
backend/alembic/: env.py
backend/alembic/versions/: 343e6211b410_initial_schema.py
backend/app/: config.py  database.py  exceptions.py  main.py  models.py
backend/app/repositories/: folder_repo.py  session_repo.py  task_repo.py
backend/app/routers/: chat.py  files.py  folders.py  messages.py  permissions.py  sessions.py  tasks.py  terminal.py
backend/app/schemas/: models.py
backend/app/services/: claude_service.py  client_manager.py  folder_service.py  history.py  mcp_tools.py  permissions.py  plan.py  serializers.py  stream_cache.py  summarizer.py  task_service.py
backend/tests/: conftest.py  test_routers_folders.py  test_routers_tasks.py  test_serializers.py
frontend/: components.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css  main.tsx  types.ts
frontend/src/components/: ChatInput.tsx  ChatPanel.tsx  FileExplorerPanel.tsx  FolderList.tsx  FolderPicker.tsx  HistoryPanel.tsx  MarkdownRenderer.tsx  MessageBubble.tsx  PermissionRequestDialog.tsx  PlanPanel.tsx  ResultInfoBar.tsx  Sidebar.tsx  SlashCommandMenu.tsx  TaskList.tsx  TerminalPanel.tsx  chat.css
frontend/src/hooks/: useChatSession.ts  useFolderTree.ts  useImageAttachments.ts  useLayout.ts  useLayout.tsx  useResizable.ts  useSlashCommands.ts  useStreamConnection.ts  useStreamEvents.ts  (+1 more)
(+4 files in other folders)
