[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "claude-agent-sdk>=0.2.87",
    "fastapi>=0.136.3",
    "greenlet>=3.5.1",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
